@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 18-07-2005 changed: Auto visualisation timeout changed to a screensaver mode (Use Visualisation if playing music).
  - 18-07-2005 added: routines for knowing wich field is currently being rendered, can be used to sync interlaced video
  - 18-07-2005 fixed: if xbmc ran out of memmory when starting a video, it often lockup with a black screen
  - 18-07-2005 fixed: deinterlacing in mplayer wasn't possible to enable without enabling postprocessing
